--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.jakewharton:disklrucache:2.0.2'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
     testImplementation 'junit:junit:4.12'
@@ -53,11 +54,12 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     implementation 'me.yokeyword:fragmentation:0.10.4'
     implementation 'com.google.dagger:dagger:2.19'
-    annotationProcessor  'com.google.dagger:dagger-compiler:2.19'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.glassfish:javax.annotation:10.0-b28'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'me.jessyan:autosize:1.1.2'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
