--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.base.flyjiang.baseflyapp">
 
     <uses-permission android:name="android.permission.MANAGE_NEWLANDUART3" />
@@ -38,7 +37,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".view.Main2Activity"></activity>
+        <activity android:name=".view.Main2Activity" />
         <activity
             android:name=".view.MainActivity"
             android:launchMode="singleTask">
